--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,7 @@
 ##spring.security.user.password=walid@just
 #
 #
-spring.data.mongodb.uri=${MONGO_URI}
+#spring.data.mongodb.uri=${MONGO_URI}
+spring.data.mongodb.uri=mongodb+srv://walidkhsharaiyra:xb0CqBhMnKkAc7p4@aaaw.2z6xw.mongodb.net/?retryWrites=true&w=majority&appName=AAAW
 spring.data.mongodb.database=AAAW
+#spring.profiles.active=dev
